# Hackthon_0

gold_tier/: .env.example  .env.social.example  .gitignore  AUDIT_SYSTEM_COMPLETE.md  README.md  (+23 more)
silver_tier/: Business_Goals.md  main.py  pyproject.toml
silver_tier/.obsidian/: workspace.json
silver_tier/history/prompts/general/: 007-whatsapp-linkedin-watchers.general.prompt.md  008-email-mcp-server.general.prompt.md
silver_tier/mcp/email-mcp/: .env.example  index.js  package-lock.json  package.json
silver_tier/watchers/: __init__.py  linkedin_watcher.py  whatsapp_watcher.py
silver_tier_22/: AGENT_SKILLS.md  Business_Goals.md  Company_Handbook.md  Dashboard.md  README.md  ecosystem.config.js  main.py  pyproject.toml
silver_tier_22/.claude/commands/: linkedin-post.md  silver-reason.md
silver_tier_22/.obsidian/: workspace.json
silver_tier_22/Scripts/: README.md  approval_watcher.py  base_watcher.py  gmail_watcher.py  linkedin_poster.py  linkedin_watcher.py  mcp_email_client.py  orchestrator.py  whatsapp_watcher.py
silver_tier_22/history/prompts/general/: 007-gmail-watcher-silver-tier.general.prompt.md  008-whatsapp-watcher-silver-tier.general.prompt.md  009-linkedin-watcher-and-agent-skills.general.prompt.md  010-mcp-email-server-build.general.prompt.md  011-silver-tier-reasoning-pipeline.general.prompt.md  012-orchestrator-cron-pm2-readme.general.prompt.md  013-linkedin-post-agent-skill.general.prompt.md
silver_tier_22/mcp-email-server/: .env.example  package-lock.json  package.json  tsconfig.json
silver_tier_22/mcp-email-server/src/: index.ts
(+245 files in other folders)
